--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -176,6 +176,9 @@
      .plan-duration-card{
           width: 90%;
      }
+     .contact-seller-view .contact-seller-container{
+          width: 95%;
+     }
 }
 
 
