--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2348,6 +2348,36 @@ textarea{
      padding: 50px 0;
 }
 
+.user-types-container{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     flex-wrap: wrap;
+     padding: 20px 5%;
+     gap: 20px;
+     justify-content: space-between;
+}
+
+.user-type-container{
+     width: 22%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+     box-shadow: 0.5px 0.5px 4px var(--text-color-para2);
+     padding: 20px;
+     border-radius: 20px;
+     gap: 10px;
+}
+
+.user-type-container p{
+     font-size: 0.9rem;
+     color: var(--text-color-para1);
+     font-weight: 600;
+     text-align: center;
+}
+
 .close-icon{
      position: fixed;
      top: 15px;
