--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -209,6 +209,9 @@
      .contact-seller-view .contact-seller-container{
           width: 50%;
      }
+     .user-type-container{
+          width: 45%;
+     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -560,6 +563,10 @@
      }
      .contact-seller-view .contact-seller-container{
           width: 70%;
+     }
+
+     .user-type-container{
+          width: 47%;
      }
 }
 
