--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -566,7 +566,9 @@
      }
 
      .user-type-container{
-          width: 47%;
+          width: 45%;
+          padding: 10px 5px;
+          border-radius: 10px;
      }
 }
 
