--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2787,7 +2787,7 @@ textarea{
 }
 
 .initial-loader .loader-container{
-     width: 15%;
+     width: 40%;
      min-width: 150px;
      aspect-ratio: 1/1;
      display: flex;
@@ -2811,7 +2811,7 @@ textarea{
 }
 
 .initial-loader img{
-     width: 100%;
+     width:250px;
      position: relative;
      z-index: 0;
 }
