update on the user invoice generation part

--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -179,6 +179,10 @@
      .contact-seller-view .contact-seller-container{
           width: 95%;
      }
+
+     .pay-plan-invoice-container .confirm-payment-container .pay-options .image {
+          width: 90%;
+     }
 }
 
 
