--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -470,6 +470,8 @@ textarea{
      align-items: flex-start;
      justify-content: space-between;
      padding-block: 10px;
+     flex-wrap: wrap;
+     gap: 5px;
 }
 
 .pay-plan-invoice-container .confirm-payment-container .pay-options .image{
