--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1988,6 +1988,149 @@ textarea{
      right: 0;
 }
 
+.home-locations-section{
+     width: 99%;
+     background-color: var(--text-color-para2);
+     border-radius: 10px;
+     padding: 20px;
+}
+
+.home-locations-section .locations-title{
+     width: 100%;
+     padding-inline: 10px;
+}
+
+.home-locations-section .locations-title h3{
+     color: var(--white-text);
+     font-size: 1.5rem;
+     font-weight: 800;
+}
+
+.home-locations-section .locations-title p{
+     font-size: 0.85rem;
+     color: var(--text-color-title);
+     font-weight: 600;
+}
+
+.home-locations-section .locations-content{
+     width: 90%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     gap: 5px;
+     padding-block: 10px;
+     margin-inline: auto;
+}
+
+.home-locations-section .locations-content span {
+     font-size: 0.86rem;
+     font-weight: 600;
+     color: var(--light-gray);
+     width: 18%;
+     padding-block: 4px;
+     letter-spacing: 0.45px;
+     cursor: pointer;
+     transition: all 0.4s ease;
+}
+
+.home-locations-section .locations-content span:hover{
+     color: var(--white-text);
+     text-decoration: underline;
+}
+
+.home-categories-section{
+     width: 99%;
+     background-color: var(--white-text);
+     border-radius: 10px;
+     padding: 20px;
+     margin-bottom: 10px;
+}
+
+.home-categories-section p{
+     text-align: right;
+     color: var(--back-color-gold2);
+     cursor: pointer;
+     font-size: 0.9rem;
+     font-weight: 700;
+}
+
+.home-categories-section .title{
+     width: 100%;
+     padding-inline: 10px;
+}
+
+.home-categories-section .title h3{
+     font-size: 1.5rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.home-categories-section .content{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-between;
+     padding-block: 10px;
+     flex-wrap: wrap;
+} 
+
+.home-categories-subcard {
+     width: 23%;
+     min-width: 23%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     padding: 5px;
+     border-radius: 5px;
+     margin-block: 5px;
+}
+
+.home-categories-subcard .title{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: flex-start;
+     padding: 0;
+}
+
+.home-categories-subcard .title h5{
+     font-size: 0.85rem;
+     color: var(--text-color-para1);
+     font-weight: 700;
+     text-decoration: underline;
+     text-underline-offset: 3px;
+}
+
+.home-categories-subcard .title h5 span{
+     font-size: 0.8rem;
+     color: var(--back-color-blue1);
+}
+
+.home-categories-subcard .sub-categories{
+     width: 98%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     gap: 5px;
+     margin-inline: auto;
+}
+
+.home-categories-subcard .sub-categories span{
+     font-size: 0.8rem;
+     font-weight: 0.85rem;
+     font-weight: 500;
+     color: var(--text-color-para1);
+     text-decoration: underline;
+     text-decoration-thickness: 1px;
+     text-underline-offset: 2.4px;
+     font-weight: 600;
+     cursor: pointer;
+}
+
 .home-best-sellers{
      width: 100%;
      display: flex;
@@ -3041,7 +3184,51 @@ textarea{
      justify-content: center;
      gap: 5px;
 }
+
+
 /* end of section container styles */
+
+/* page breaks */
+.become-seller-section{
+     width: 99%;
+     border-radius: 10px;
+     padding: 20px;
+     background-color: var(--text-color-title);
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+     gap:10px;
+     margin-bottom: 10px;
+}
+
+.become-seller-section .title{
+     width: 100%;
+}
+
+.become-seller-section .title h4{
+     font-size: 1.5rem;
+     font-weight: 800;
+     color: var(--back-color-gold2);
+     text-align: center;
+}
+
+.become-seller-section .content{
+     width: 95%;
+     display: flex;
+     flex-direction: column;
+     gap: 5px;
+}
+
+.become-seller-section .content p {
+     font-size: 0.9rem;
+     letter-spacing: 0.45px;
+     font-weight: 400;
+     color: var(--gray-text);
+     text-align: center;
+}
+
+/* end of page breaks */
 
 /* user dashboard components */
 
