--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2302,7 +2302,6 @@ textarea{
      border-radius: 10px;
 }
 
-
 /* fixed components */
 .contact-bar{
      width: 100%;
@@ -7161,6 +7160,114 @@ textarea{
      color: var(--back-color-blue2);
 }
 /* end of agent styles */
+
+/* addition client pages styles */
+
+/* location page styles  */
+.location-page-header{
+     width: 95%;
+     border-radius: 10px;
+     padding: 20px 5%;
+     margin-block: 10px;
+     overflow: hidden;
+}
+
+.location-page-header .content{
+     width: 100%;
+     border-radius: 10px;
+     padding: 10px;
+     height: inherit;
+     background-color: #00000050;
+
+}
+
+.location-page-header .content p{
+     font-size: 1.8rem;
+     font-weight: 800;
+     color: var(--white-text);
+     text-shadow: 0.2px 0.2px 1px var(--text-color-para1);
+     text-align: center;
+}
+
+.location-page-header .content p span{
+     font-size: 1.9rem;
+     color: var(--back-color-gold2);
+}
+
+.location-main-page{
+     width: 95%;
+     display: flex;
+     margin: 10px auto;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-between;
+}
+
+.location-main-page .navigation{
+     width: 12%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;    
+     gap: 2.5px;
+     border-radius: 5px;
+     padding-block: 1.5px;
+     background-color: var(--white-text);
+     padding: 10px 5px;
+     min-width:100px;
+     background-position: center;
+     background-size: 100%;
+}
+
+.location-main-page .navigation span{
+     width: 95%;
+     color: var(--text-color-title);
+     font-size: 0.85rem;
+     font-weight: 600;
+     border: 0.9px solid var(--text-color-title); 
+     border-radius: 2px;
+     padding-inline: 5px;
+     cursor: pointer;
+     transition: all 0.5s ease;
+     order: 1;
+}
+
+.location-main-page .navigation span:hover{
+     background-color: var(--text-color-title);
+     color: var(--white-text);
+     
+}
+
+.location-main-page .navigation span.active{
+     text-align: center;
+     color: var(--white-text);
+     background-color: var(--text-color-title);
+     order: 0;
+}
+
+.location-main-page .page-content{
+     width: 85%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+     background-color: var(--white-text);
+     border-radius: 10px;
+     padding: 20px;
+
+}
+
+.no-ads-found{
+     font-size: 1.2rem;
+     color: var(--text-color-para1);
+     font-weight: 700;
+     text-align: center;
+}
+
+/* end oflocation page styles  */
+
+/* end of addition client pages */
+
 
 /*Banner styles */ 
 
