--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -605,6 +605,32 @@
           width: 80%;
      }
 
+     .location-main-page{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 10px;
+     }
+
+     .location-main-page .page-content{
+          width: 99%;
+     }
+
+     .location-main-page .navigation{
+          width: 99%;
+          padding: 5px;
+          flex-direction: row;
+          flex-wrap: wrap;
+          gap: 5px;
+     }
+
+     .location-main-page .navigation span{
+          width: auto;
+          font-size: 0.8rem;
+          font-weight: 500;
+          padding: 1.5px 2.5px;
+     }
+
 }
 
 
