--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1811,6 +1811,58 @@ textarea{
      padding-block: 5px;
 }
 
+.ads-section-title{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: end;
+     justify-content: space-between;
+     padding-block: 5px;
+     padding-inline: 10px;
+}
+
+.ads-section-title .title{
+     width: auto;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-end;
+     gap: 5px;
+}
+
+
+.ads-section-title .title .main-title{
+     font-size: 1.6rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+     vertical-align: baseline;
+     line-height: 25px;
+}
+
+.ads-section-title .title a{
+     font-size: 0.9rem;
+     font-weight: 600;
+     color: var(--featured-plan);
+}
+
+.ads-section-title .section-navigation{
+     width: auto;
+     display: flex;
+     gap: 2px;
+}
+
+.ads-section-title .section-navigation i{
+     font-size: 1.4rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+     cursor: pointer;
+     text-align: center;
+     border-radius: 2.5px;
+
+}
+
+.ads-section-title .section-navigation i.inactive{
+     color: var(--gray-text);
+}
 .user-dash-ads-container{
      width: 100%;
      display: flex;
