--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -200,6 +200,10 @@
      .user-forms .form-container{
           width: 90%;
      }
+
+     .user-subscription-card{
+          width: 95%;
+     }
 }
 
 
