--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -630,7 +630,14 @@
           font-weight: 500;
           padding: 1.5px 2.5px;
      }
+     
+     .user-subscription-card{
+          width: 80%;
+     }
 
+     .admin-advert-card{
+          width: 90%;
+     }
 }
 
 
